feat(Dtos): Add PersonDto and fields PaidBy and PaidFor to ExpenseDto
