# backend/src/Dtos/ExpenseDto.cs
@@ -1,0 +1,3 @@
+namespace src.Dtos;
+
+public record ExpenseDto(string Description, int Amount, DateTime Time, PersonDto PaidBy, List<PersonDto> PaidFor);
