# backend/src/Dtos/PersonDto.cs
@@ -1,0 +1,3 @@
+namespace src.Dtos;
+
+public record PersonDto(Guid Id, string Name);
